syntax = "proto3";

package user;

option (gogoproto.testgen_all)  = true;
option (gogoproto.benchgen_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_registration) = true;

import "github.com/elojah/trax/pkg/gogoproto/gogo.proto";

message Entity {
	bytes ID               = 1 [(gogoproto.customtype) = "github.com/elojah/trax/pkg/ulid.ID", (gogoproto.nullable) = false];

	string Name            = 2;
	string AvatarURL       = 3;

	int64 CreatedAt        = 4;
	int64 UpdatedAt        = 5;
}
